--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Free Bootstrap 5 HTML Template
                         <div class="col-lg-6 col-12 my-auto">
                             <h2>👋 Hi there, You're invited</h2>
 
-                            <h1 class="text-white hero-title mb-4">We're getting married</h1>
+                            <h1 class="text-white hero-title mb-4">hello appinventiv</h1>
 
                             <p class="text-white mb-2">
                                 <i class="bi-check-circle-fill custom-icon me-1"></i>
