--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ Free Bootstrap 5 HTML Template
                     <div class="row h-100">
 
                         <div class="col-lg-6 col-12 my-auto">
-                            <h2>👋 Hi there, You're invited</h2>
+                            <h2>👋 Hello, Appiventians </h2>
 
-                            <h1 class="text-white hero-title mb-4">hello appinventiv</h1>
+                            <h1 class="text-white hero-title mb-4">Hope your are doing good</h1>
 
                             <p class="text-white mb-2">
                                 <i class="bi-check-circle-fill custom-icon me-1"></i>
