--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Free Bootstrap 5 HTML Template
                     <div class="row h-100">
 
                         <div class="col-lg-6 col-12 my-auto">
-                            <h2>👋 Hello, Appiventians </h2>
+                            <h2>👋 Hello, azure</h2>
 
                             <h1 class="text-white hero-title mb-4">Hope your are doing good</h1>
 
